upload working, except parsing, fix please